--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "gray-matter": "^4.0.3",
+    "markdown-wasm": "^1.2.0",
     "next": "^13.5.11",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.4.6",
