--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,25 @@
 # Copy this file to `.env.local` and adjust values.
 # All vars prefixed with NEXT_PUBLIC_ are exposed to the browser.
 
+# Core site info
 NEXT_PUBLIC_SITE_NAME="Your Name"
 NEXT_PUBLIC_SITE_TITLE="Your Personal Site"
 NEXT_PUBLIC_SITE_DESCRIPTION="Personal homepage and blog."
 NEXT_PUBLIC_SITE_URL="https://example.com"
 NEXT_PUBLIC_SITE_AUTHOR="Your Name"
+NEXT_PUBLIC_SITE_TAGLINE="Short tagline for your blog."
+NEXT_PUBLIC_POSTS_PER_PAGE="5"
+NEXT_PUBLIC_DEFAULT_LOCALE="zh-TW"
+
+# Social and profile
+NEXT_PUBLIC_TWITTER_HANDLE="@yourhandle"
+NEXT_PUBLIC_GITHUB_URL="https://github.com/yourname"
+NEXT_PUBLIC_LINKEDIN_URL="https://www.linkedin.com/in/yourname/"
+NEXT_PUBLIC_EMAIL_CONTACT="you@example.com"
+
+# SEO / Open Graph
+NEXT_PUBLIC_OG_DEFAULT_IMAGE="/assets/og-default.jpg"
+NEXT_PUBLIC_TWITTER_CARD_TYPE="summary_large_image"
+
+# Analytics (public ID only)
+NEXT_PUBLIC_ANALYTICS_ID=""
