Tweak card images, dark mode text, social links, and add right sidebar

--- a/.env.local.example
+++ b/.env.local.example
@@ -16,6 +16,8 @@ NEXT_PUBLIC_TWITTER_HANDLE="@yourhandle"
 NEXT_PUBLIC_GITHUB_URL="https://github.com/yourname"
 NEXT_PUBLIC_LINKEDIN_URL="https://www.linkedin.com/in/yourname/"
 NEXT_PUBLIC_EMAIL_CONTACT="you@example.com"
+NEXT_PUBLIC_MASTODON_URL="https://your.instance/@yourhandle"
+NEXT_PUBLIC_GITEA_URL="https://gitea.example/yourname"
 
 # SEO / Open Graph
 NEXT_PUBLIC_OG_DEFAULT_IMAGE="/assets/og-default.jpg"
