Add gravatar hero with social icons to right sidebar

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,6 +10,7 @@ NEXT_PUBLIC_SITE_AUTHOR="Your Name"
 NEXT_PUBLIC_SITE_TAGLINE="Short tagline for your blog."
 NEXT_PUBLIC_POSTS_PER_PAGE="5"
 NEXT_PUBLIC_DEFAULT_LOCALE="zh-TW"
+NEXT_PUBLIC_SITE_AVATAR_URL="https://www.gravatar.com/avatar/yourhash?s=160&d=identicon"
 
 # Social and profile
 NEXT_PUBLIC_TWITTER_HANDLE="@yourhandle"
