Introduce env-driven accent color system and apply to links, icons, and tags

--- a/.env.local.example
+++ b/.env.local.example
@@ -12,6 +12,12 @@ NEXT_PUBLIC_POSTS_PER_PAGE="5"
 NEXT_PUBLIC_DEFAULT_LOCALE="zh-TW"
 NEXT_PUBLIC_SITE_AVATAR_URL="https://www.gravatar.com/avatar/yourhash?s=160&d=identicon"
 
+# Color scheme / accents
+NEXT_PUBLIC_COLOR_ACCENT="#2563eb"
+NEXT_PUBLIC_COLOR_ACCENT_SOFT="#dbeafe"
+NEXT_PUBLIC_COLOR_ACCENT_TEXT_LIGHT="#1d4ed8"
+NEXT_PUBLIC_COLOR_ACCENT_TEXT_DARK="#93c5fd"
+
 # Social and profile
 NEXT_PUBLIC_TWITTER_HANDLE="@yourhandle"
 NEXT_PUBLIC_GITHUB_URL="https://github.com/yourname"
