Add env-based short about text under sidebar avatar and remove 'about site' card

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_SITE_TAGLINE="Short tagline for your blog."
 NEXT_PUBLIC_POSTS_PER_PAGE="5"
 NEXT_PUBLIC_DEFAULT_LOCALE="zh-TW"
 NEXT_PUBLIC_SITE_AVATAR_URL="https://www.gravatar.com/avatar/yourhash?s=160&d=identicon"
+NEXT_PUBLIC_SITE_ABOUT_SHORT="A short sentence about you."
 
 # Color scheme / accents
 NEXT_PUBLIC_COLOR_ACCENT="#2563eb"
