--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "autoprefixer": "^10.4.22",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^13.5.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3"
