--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "content"]
 	path = content
-	url = https://gitea.gbanyan.net/gbanyan/personal-blog.git
+url = https://github.com/gbanyan/personal-blog.git
