Migrate to Contentlayer2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@/*": [
         "./*"
       ],
-      "contentlayer/generated": [
+      "contentlayer2/generated": [
         "./.contentlayer/generated"
       ]
     },
