--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.5.8",
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "markdown-wasm": "^1.2.0",
     "next": "^13.5.11",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.5.8",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
